--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Blog</title>
     <link rel="stylesheet" href="/css/jass.css">
-    {{!-- <link rel="stylesheet" href="/css/style.css"> --}}
+    <link rel="stylesheet" href="/css/style.css">
     </head>
 
     <body>
@@ -18,11 +18,12 @@
                 <a href="/dashboard" class="p-2">Dashboard</a>
                 <!-- Conditionally render login or logout links -->
                 {{#if logged_in}}
-                <a href="/logout" class="p-2">Logout</a> |
+                <a href="#" id="logout" class="p-2">Logout</a>
                 {{else}}
                 <a href="/login" class="p-2">Login</a>
                 {{/if}}
             </nav>
+            <a href="/post" class="btn btn-primary m-3 p-2">New Post</a>
         </header>
         <main class="container container-fluid mt-5">
         <!-- Render the sub layout -->
