added updating post functionality and adding a new post

--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -6,11 +6,12 @@
         <input class="form-input" type="text" id="post-title" />
       </div>
       <div class="form-group">
-        <label for="contents">Blog:</label>
-        <textarea class="form-textarea" type="text" id="contents" />
+        <label for="content">Blog:</label>
+        <textarea class="form-textarea" type="text" id="content"></textarea>
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">Submit</button>
       </div>
     </form>
 </div>
+<script src="./js/newPost.js"></script>
