--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -12,10 +12,30 @@
             </header>
 
             <div class="card-body display-flex justify-space-between">
-                <button class="btn btn-primary" data-btn-id="{{post.id}}">Update</button>
+                <button class="btn btn-primary btn-modal" data-btn-id="{{post.id}}">Update</button>
                 <button class="btn btn-danger" data-btn-id="{{post.id}}">Delete</button>
             </div>
         </section>
     {{/each}}
+</div>
+<div id="update" class="modal">
+  <div class="modal-content">
+    <div class="update-card card p-4">
+        <h2 class="page-title">Update Post</h2>
+        <form class="form update-form">
+            <div class="form-group">
+                <label for="title-update">Title:</label>
+                <input class="form-input" type="text" id="title-update" />
+            </div>
+            <div class="form-group">
+                <label for="content-update">Blog:</label>
+                <textarea class="form-textarea" type="text" id="content-update"></textarea>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary" type="submit">Update</button>
+            </div>
+        </form>
+    </div>
+  </div>
 </div>
 <script src="./js/profile.js"></script>
