--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,7 +3,7 @@
     <a href="/post" class="btn btn-primary m-3 p-2">New Post</a>
     <p>Your post history</p>   
 </section>
-<div class="display-flex flex-row justify-space-between">
+<div class="display-flex flex-row justify-space-between blog-cards">
     {{#each posts as |post|}}
         <section class="card col-5">            
             <header>
@@ -12,8 +12,8 @@
             </header>
 
             <div class="card-body display-flex justify-space-between">
-                <button class="btn btn-primary btn-modal" data-btn-id="{{post.id}}">Update</button>
-                <button class="btn btn-danger" data-btn-id="{{post.id}}">Delete</button>
+                <button class="btn btn-primary btn-modal" data-upd-id="{{post.id}}">Update</button>
+                <button class="btn btn-danger" data-del-id="{{post.id}}">Delete</button>
             </div>
         </section>
     {{/each}}
