--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 
     <body>
     <div class="flex-column justify-space-around">
-        <header class="display-flex flex-column align-center p-2">
+        <header class="header display-flex flex-column align-center p-2">
             <h1>Tech Blog</h1>
             <nav>
                 <a href="/" class="p-2">Home</a>
