--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -22,7 +22,9 @@
             </div>
         </section>
     {{/each}}
+    {{#if logged_in}}
     <button class="btn btn-primary btn-modal" data-btn-id="{{post.id}}">Comment</button>
+    {{/if}}
 </div>
 <div id="comment" class="modal">
   <div class="modal-content">
@@ -40,4 +42,4 @@
     </div>
   </div>
 </div>
-<script src="./js/post.js" type="text/javascript"></script>
+<script src="/js/post.js" type="text/javascript"></script>
