--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech Blog</title>
+    <title>Dynamo Tech Blog</title>
     <link rel="stylesheet" href="/css/jass.css">
     <link rel="stylesheet" href="/css/style.css">
     </head>
@@ -12,7 +12,7 @@
     <body>
     <div class="flex-column justify-space-around">
         <header class="header display-flex flex-column align-center p-2">
-            <h1>Tech Blog</h1>
+            <h1>Dynamo Tech Blog</h1>
             <nav>
                 <a href="/" class="p-2">Home</a>
                 <a href="/dashboard" class="p-2">Dashboard</a>
@@ -24,7 +24,7 @@
                 {{/if}}
             </nav>
         </header>
-        <main class="container container-fluid mt-5">
+        <main class="container mt-5">
         <!-- Render the sub layout -->
         {{{ body }}}
         </main>
